<resources>
    <string name="app_name">Argus Sonora</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Ingrese su correo electrónico</string>
    <string name="hint_password">Ingrese su contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="invalid_format_email">Invalid Email Format</string>
    <string name="empty_email">Empty Email</string>
    <string name="empty_password">Empty Password</string>
    <string name="invalid_format_password">Invalid Password Format</string>
    <string name="No_Connection_To_Internet">No Internet Connection</string>
    <string name="title_activity_cliente_guardias">ClienteGuardiasActivity</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_add_guardia">Agregar Guardia Temporal</string>
    <string name="action_consigna">Consignas</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="action_sign_out">Cerrar Session</string>
    <string name="action_bitacora">Bitacora</string>
    <string name="title_activity_consignas">ConsignasActivity</string>
    <string name="title_activity_bitacora_registro">Bitacora</string>
    <string name="dialog_bitacora_registro_add_title">Añadir Bitacora</string>
    <string name="dialog_bitacora_registro_edit_title">Editar Bitacora</string>
    <string name="action_privacy_policy">Privacy Policy</string>
</resources>
