<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".presentation.activity.ClienteActivity">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_autorenew_white_24dp"
        android:title="Refresh"
        app:showAsAction="always"/>

    <group>
        <item
            android:id="@+id/action_add_guardia"
            android:orderInCategory="100"
            android:title="@string/action_add_guardia"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_consigna"
            android:orderInCategory="100"
            android:title="@string/action_consigna"
            app:showAsAction="never" />


        <item
            android:id="@+id/action_tutorial"
            android:orderInCategory="100"
            android:title="@string/action_tutorial"
            app:showAsAction="never" />

    </group>
</menu>