<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tecnologiasintech.argussonora.presentation.activity.MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        android:title="Search"/>

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_autorenew_white_24dp"
        android:title="Refresh"
        app:showAsAction="always"/>


    <item
        android:id="@+id/action_bitacora"
        android:orderInCategory="100"
        android:title="@string/action_bitacora"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="100"
        android:title="@string/action_sign_out"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_privacy_Policy"
        android:orderInCategory="100"
        android:title="@string/action_privacy_policy"
        app:showAsAction="never" />

</menu>
